--- a/pom.xml
+++ b/pom.xml
@@ -14,10 +14,27 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-		<kotlin.version>1.3.70</kotlin.version>
+		<kotlin.version>1.4.30-M1</kotlin.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+            <version>3.6.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jfree</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.0.19</version>
+        </dependency>
+        <dependency>
+            <groupId>net.sf.jchart2d</groupId>
+            <artifactId>jchart2d</artifactId>
+            <version>3.3.2</version>
+        </dependency>
+
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
@@ -93,7 +110,7 @@
         </dependency>
         <dependency>
 			<groupId>org.jetbrains.kotlin</groupId>
-			<artifactId>kotlin-stdlib</artifactId>
+			<artifactId>kotlin-stdlib-jdk8</artifactId>
 			<version>${kotlin.version}</version>
 		</dependency>
         <dependency>
@@ -123,7 +140,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.0</version>
+            <version>1.18.16</version>
             <scope>provided</scope>
         </dependency>
 
@@ -190,8 +207,42 @@
             <version>16.0.2</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-test</artifactId>
+            <version>${kotlin.version}</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
+
+    <repositories>
+        <repository>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <id>bintray.kotlin.eap</id>
+            <name>Bintray Kotlin EAP Repository</name>
+            <url>https://dl.bintray.com/kotlin/kotlin-eap</url>
+        </repository>
+    </repositories>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <id>bintray.kotlin.eap</id>
+            <name>Bintray Kotlin EAP Repository</name>
+            <url>https://dl.bintray.com/kotlin/kotlin-eap</url>
+        </pluginRepository>
+    </pluginRepositories>
 
     <build>
         <plugins>
@@ -202,30 +253,52 @@
             <executions>
                 <execution>
                     <id>compile</id>
+                    <phase>compile</phase>
                     <goals> <goal>compile</goal> </goals>
                     <configuration>
                         <sourceDirs>
-                            <sourceDir>${project.basedir}/src/main/kotlin</sourceDir>
-                            <sourceDir>${project.basedir}/src/main/java</sourceDir>
+                            <source>target/generated-sources/protobuf/java</source>
+                            <source>src/main/java</source>
+                            <source>src/main/kotlin</source>
                         </sourceDirs>
                     </configuration>
                 </execution>
                 <execution>
                     <id>test-compile</id>
+                    <phase>test-compile</phase>
                     <goals> <goal>test-compile</goal> </goals>
                     <configuration>
                         <sourceDirs>
-                            <sourceDir>${project.basedir}/src/test/kotlin</sourceDir>
-                            <sourceDir>${project.basedir}/src/test/java</sourceDir>
+                            <source>src/test/kotlin</source>
+                            <source>src/test/java</source>
                         </sourceDirs>
                     </configuration>
                 </execution>
             </executions>
+            <configuration>
+                <jvmTarget>1.8</jvmTarget>
+            </configuration>
         </plugin>
 		<plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
             <version>3.7.0</version>
+            <executions>
+                <execution>
+                    <id>compile</id>
+                    <phase>compile</phase>
+                    <goals>
+                        <goal>compile</goal>
+                    </goals>
+                </execution>
+                <execution>
+                    <id>testCompile</id>
+                    <phase>test-compile</phase>
+                    <goals>
+                        <goal>testCompile</goal>
+                    </goals>
+                </execution>
+            </executions>
             <configuration>
                 <encoding>${project.build.sourceEncoding}</encoding>
                 <source>${maven.compiler.source}</source>
@@ -267,14 +340,14 @@
 	    	</executions>
 	    </plugin>
 
-	    <plugin>
+	    <!--<plugin>
       	   	<groupId>org.eluder.coveralls</groupId>
     		<artifactId>coveralls-maven-plugin</artifactId>
 	    	<version>4.3.0</version>
 	    	<configuration>
 		    <repoToken>${env.repoToken}</repoToken>
 	    	</configuration>
-	    </plugin>
+	    </plugin>-->
 
         </plugins>
     </build>
