--- a/pom.xml
+++ b/pom.xml
@@ -214,6 +214,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.20</version>
+        </dependency>
+
     </dependencies>
 
     <repositories>
