--- a/pom.xml
+++ b/pom.xml
@@ -220,6 +220,11 @@
             <version>42.2.20</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.httpcomponents.core5</groupId>
+            <artifactId>httpcore5</artifactId>
+            <version>5.1</version>
+        </dependency>
     </dependencies>
 
     <repositories>
