--- a/pom.xml
+++ b/pom.xml
@@ -12,10 +12,11 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-		<kotlin.version>1.4.30-M1</kotlin.version>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+		<kotlin.version>1.5.31</kotlin.version>
     </properties>
+
 
     <dependencies>
         <dependency>
@@ -38,7 +39,7 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>5.3.7.Final</version>
+            <version>5.5.7.Final</version>
         </dependency>
 
         <!-- API, java.xml.bind module -->
@@ -68,13 +69,13 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>3.3.3</version>
+            <version>3.12.4</version>
             <!--scope>test</scope-->
         </dependency>
         <dependency>
             <groupId>org.powermock</groupId>
             <artifactId>powermock-api-mockito2</artifactId>
-            <version>1.7.0</version>
+            <version>2.0.9</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -106,7 +107,7 @@
         <dependency>
             <groupId>org.telegram</groupId>
             <artifactId>telegrambots</artifactId>
-            <version>4.7</version>
+            <version>5.3.0</version>
         </dependency>
         <dependency>
 			<groupId>org.jetbrains.kotlin</groupId>
@@ -122,7 +123,7 @@
         <dependency>
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java</artifactId>
-            <version>3.11.4</version>
+            <version>3.18.0</version>
         </dependency>
 
         <dependency>
@@ -134,13 +135,13 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>21.0</version>
+            <version>30.1.1-jre</version>
         </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.16</version>
+            <version>1.18.20</version>
             <scope>provided</scope>
         </dependency>
 
@@ -312,8 +313,8 @@
             </executions>
             <configuration>
                 <encoding>${project.build.sourceEncoding}</encoding>
-                <source>${maven.compiler.source}</source>
-                <target>${maven.compiler.target}</target>
+                <source>16</source>
+                <target>16</target>
             </configuration>
         </plugin>
 
@@ -334,7 +335,7 @@
 	    <plugin>
 	    	<groupId>org.jacoco</groupId>
 	    	<artifactId>jacoco-maven-plugin</artifactId>
-	    	<version>0.7.6.201602180812</version>
+	    	<version>0.8.7</version>
 		<configuration>
 		    <excludes>
 		    	<exclude>qlua/**</exclude>
@@ -351,15 +352,28 @@
 	    	</executions>
 	    </plugin>
 
-	    <!--<plugin>
-      	   	<groupId>org.eluder.coveralls</groupId>
-    		<artifactId>coveralls-maven-plugin</artifactId>
-	    	<version>4.3.0</version>
-	    	<configuration>
-		    <repoToken>${env.repoToken}</repoToken>
-	    	</configuration>
-	    </plugin>-->
-
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.5.1</version>
+                <configuration>
+                    <outputDirectory>
+                        ${project.build.directory}/lib/
+                    </outputDirectory>
+                    <overWriteReleases>false</overWriteReleases>
+                    <overWriteSnapshots>false</overWriteSnapshots>
+                    <overWriteIfNewer>true</overWriteIfNewer>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
